# terse-cli

./: Cargo.toml  LICENSE.md  readme.md
example/: Cargo.toml  main.rs
src/: main.rs
terse_cli/: Cargo.toml  lib.rs
terse_cli_lib/: Cargo.toml  lib.rs
tests/: main.rs  test_cli_subcommand.rs
