[package]
name = "terse_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.89", features = ["full"] }
trybuild = "1.0.101"
terse_cli_lib = { path = "../terse_cli_lib" }

[lib]
proc-macro = true
path = "lib.rs"
