[package]
name = "terse_cli"
version = "0.1.2"
authors = ["David McNamee <david@mcnamee.io>", "Jeffray Zhang <zhangjeffray@gmail.com>"]
edition = "2021"
description = "A library for building no-boilerplate CLI apps"
license = "MIT"
repository = "https://github.com/JeffrayZhang/terse-cli"
homepage = "https://github.com/JeffrayZhang/terse-cli"
readme = "../readme.md"

[dependencies]
proc-macro2 = "1.0.92"
terse_cli_lib = { path = "../terse_cli_lib", version = "0.1.0" }

[lib]
proc-macro = true
path = "lib.rs"
