[package]
name = "terse_cli_lib"
version = "0.1.1"
authors = ["David McNamee <david@mcnamee.io>", "Jeffray Zhang <zhangjeffray@gmail.com>"]
edition = "2021"
description = "A library for building no-boilerplate CLI apps"
license = "MIT"

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.89", features = ["full"] }

[lib]
path = "lib.rs"
